[package]
name = "home"
description = "Commute homewards"
version = "1.0.0"
license = "MPL-2.0"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
homepage = "https://github.com/swsnr/mvg_home"
repository = "https://github.com/swsnr/mvg_home.git"
edition = "2021"
publish = false

[dependencies]
toml = "0.7.2"
serde = { version = "1.0.152", features = ["derive"] }
dirs = "4.0.0"
anyhow = "1.0.69"
reqwest = { version = "0.11.14", features = ["json"] }
url = "2.3.1"
time = { version = "0.3.20", features = [
    "local-offset",
    "macros",
    "formatting",
    "serde",
] }
clap = { version = "4.1.8", features = ["derive"] }
futures = "0.3.26"
flexbuffers = "2.0.0"
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
# tokio: enable tokio runtime, since we're using tokio anyway
# portal: enable freedesktop proxy portal resolver
system_proxy = { version = "0.3.1", default-features = false, features = ["tokio", "portal"]}
# rt: provides the actual runtime
# rt-multi-thread: for blocking inside async contexts, because request's proxy API is synchronous
# sync: provides channels, which we need because the reqwest proxy API is synchronous
tokio = { version = "1.26.0", default-features = false, features = ["rt", "rt-multi-thread", "sync"] }
humantime = "2.1.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
# macros: for tokio::test
tokio = { version = "1.26.0", default-features = false, features = ["macros"] }
