[package]
name = "home"
description = "Commute homewards"
version = "3.0.0"
license = "MPL-2.0"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
homepage = "https://github.com/swsnr/mvg_home"
repository = "https://github.com/swsnr/mvg_home.git"
edition = "2021"
publish = false

[dependencies]
anstyle = "1.0.4"
toml = { version = "0.8.2", default-features = false, features=["parse"] }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
dirs = "5.0.1"
anyhow = { version = "1.0.75", default-features = false, features = ["std"] }
reqwest = { version = "0.11.22", default-features = false, features = ["default-tls", "json"] }
chrono = { version = "0.4.31", default-features = false, features = ["std", "clock", "serde"] }
clap = { version = "4.4.6", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
futures = { version = "0.3.28", default-features = false }
flexbuffers = "2.0.0"
tracing = { version = "0.1.37", default-features = false }
tracing-futures = { version = "0.2.5", default-features = false, features = ["std-future"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "ansi", "env-filter"] }
# tokio: enable tokio runtime, since we're using tokio anyway
# portal: enable freedesktop proxy portal resolver
system_proxy = { version = "0.3.2", default-features = false, features = ["tokio", "portal"]}
# rt: provides the actual runtime
# rt-multi-thread: for blocking inside async contexts, because request's proxy API is synchronous
# sync: provides channels, which we need because the reqwest proxy API is synchronous
tokio = { version = "1.32.0", default-features = false, features = ["rt"] }
humantime = "2.1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
# macros: for tokio::test
tokio = { version = "1.32.0", default-features = false, features = ["macros"] }
chrono-tz = "0.8.3"
